# ros2_cpp_template

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config_file.yaml  config_file_test.yaml
include/cpp_template/: cpp_template.hpp
include/ros2_cpp_template/: ros2_cpp_template.hpp
launch/: ros2_cpp_template_launch.py
msg/: MyTemplateMsg.msg
src/: cpp_template.cpp  cpp_template_main.cpp  ros2_cpp_template.cpp  ros2_cpp_template_node.cpp
srv/: MyTemplateSrv.srv
tests/: CMakeLists.txt  c_plus_plus_template_benchmark.cpp  c_plus_plus_template_gtest.cpp  c_plus_plus_template_test.cpp
